--- a/CalculatorChallenge/CalculatorChallenge.csproj
+++ b/CalculatorChallenge/CalculatorChallenge.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CalculatorChallenge.Engine\CalculatorChallenge.Engine.csproj" />
   </ItemGroup>
 
